crates/sourcepawn-studio/tests/text_document/snapshots/main__text_document__completion__include_1.snap
---
source: crates/sourcepawn-studio/tests/text_document/completion.rs
assertion_line: 52
expression: "complete(r#\"\n%! bar.sp\nint bar;\n%! include/baz.inc\nint baz;\n%! foo.sp\n#include \"\"\n          |\n          ^\"#,\n    Some('\"'.to_string()))"
---
[
  {
    "label": "bar.sp",
    "kind": 17,
    "detail": "bar.sp",
    "insertText": "bar.sp"
  },
  {
    "label": "foo.sp",
    "kind": 17,
    "detail": "foo.sp",
    "insertText": "foo.sp"
  },
  {
    "label": "include",
    "kind": 19,
    "detail": "include"
  }
]
