crates/sourcepawn-studio/tests/text_document/snapshots/main__text_document__completion__include_4.snap
---
source: crates/sourcepawn-studio/tests/text_document/completion.rs
assertion_line: 100
expression: "complete(r#\"\n%! bar.sp\nint bar;\n%! include/baz.inc\n#include \"\"\n          |\n          ^\n%! foo.sp\nint foo;\"#,\n    Some('\"'.to_string()))"
---
[
  {
    "label": "baz",
    "kind": 17,
    "detail": "include/baz.inc",
    "insertText": "baz"
  }
]
