crates/sourcepawn-studio/tests/text_document/snapshots/main__text_document__completion__include_6.snap
---
source: crates/sourcepawn-studio/tests/text_document/completion.rs
assertion_line: 132
expression: "complete(r#\"\n%! main.sp\n#include \"sub_folder/foo.sp\"\nint main;\n%! sub_folder/foo.sp\n#include <sub_folder/>\n                     |\n                     ^\n%! sub_folder/bar.sp\nint bar;\"#,\n    Some(\"/\".to_string()))"
---
[
  {
    "label": "bar.sp",
    "kind": 17,
    "detail": "sub_folder/bar.sp",
    "insertText": "bar.sp>"
  },
  {
    "label": "foo.sp",
    "kind": 17,
    "detail": "sub_folder/foo.sp",
    "insertText": "foo.sp>"
  }
]
